Adds BLE MIDI and wip app

--- a/src/displayapp/apps/Apps.h.in
+++ b/src/displayapp/apps/Apps.h.in
@@ -41,7 +41,8 @@ namespace Pinetime {
       SettingShakeThreshold,
       SettingBluetooth,
       Error,
-      Weather
+      Weather,
+      Midi
     };
 
     enum class WatchFace : uint8_t {
